# project_Elevator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  killall.sh  run.sh  specification.txt
C++/: CMakeLists.txt
C++/inc/: elevator.h  request.h
C++/src/: elevator.cpp  main.cpp  request.cpp
docker/: Dockerfile  create-docker.sh  run-docker.sh
elevator/: CMakeLists.txt
elevator/config/: ev_config-2.json  ev_config.json
elevator/include/: elevator.h  elevator_can_interface.h  elevator_config.h
elevator/src/: elevator.cpp  elevator_can_interface.cpp  elevator_config.cpp  main.cpp
include/: manifest.h
main/: README.md  main.py
mainController/: CMakeLists.txt
mainController/config/: config.json
mainController/include/: buildingSystem.h  elevator.h  elevatorManager.h  floorPanel.h  main_controller.h  main_controller_can_interface.h  manifest.h
mainController/src/: CMakeLists.txt  buildingSystem.cpp  elevator.cpp  main.cpp  main_controller.cpp  main_controller_can_interface.cpp  manifest.cpp
panel/: CMakeLists.txt
panel/config/: panel_config.json
panel/include/: panel_can_interface.h  panel_config.h  panel_input.h  panel_main.h  panel_output.h
panel/src/: main.cpp  panel_can_interface.cpp  panel_config.cpp  panel_input.cpp  panel_main.cpp  panel_output.cpp
script/: build.sh  config.sh
src/: elevator.cpp  elevatorManager.cpp  floorPanel.cpp  main.cpp  main.py  test.sh  trigger.py
web/: can-web.js  package-lock.json  package.json
web/public/: index.html
web2.0/: package-lock.json  server.js
web2.0/public/: index.html
webCAN/: README.md  package-lock.json  package.json  server.js
webCAN/public/: index.html  script.js  style.css
